[project]
name = "hiero-sdk-python"
dynamic = ["version"]
description = "A Hiero SDK in pure Python"
maintainers = [
    { name = "Nadine Loepfe", email = "nadine.loepfe@hashgraph.com" },
    { name = "Sophie Bulloch", email = "exploreriii57@gmail.com" }
]
authors = [
    { name = "Nadine Loepfe", email = "nadine.loepfe@hashgraph.com" },
    { name = "Richard Bair", email = "rbair23@users.noreply.github.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10, <3.14"
dependencies = [
    "grpcio-tools==1.76.0",
    "protobuf==6.33.2",
    "grpcio==1.76.0",
    "cryptography==46.0.4",
    "python-dotenv==1.2.1",
    "requests>=2.32.4",
    "pycryptodome==3.23.0",
    "eth-abi==5.2.0",
    "rlp>=4.0.0",
    "eth-keys==0.7.0",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=7.0.0",
]
lint = [
    "ruff>=0.14.9",
    "mypy>=1.18.2",
    "typing-extensions>=4.15.0",
]

[tool.uv]
default-groups = ["dev", "lint"]

[build-system]
requires = ["pdm-backend", "setuptools", "setuptools_scm"]
build-backend = "pdm.backend"

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"
local_scheme = "dirty-tag"

[tool.pdm]
version = { source = "scm" }

[tool.pdm.build]
package-dir = "src"
excludes = ["**/.pytest_cache"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "D",    # docstrings
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # import sorting
    "B",    # bugbear (real bugs)
    "UP",   # pyupgrade (modern syntax)
    "SIM",  # simplify logic
    "PERF", # performance traps
    "ARG",  # unused function arguments
    "RET",  # return consistency
    "RSE",  # exception correctness
]
ignore = [
    "D212",     # disable "summary on same line"
    "E501",     # line length -> formatter
    "B008",     # function calls in argument defaults 
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.pydocstyle]
convention = "google"
